Add CF sweep supplementary figure

--- a/3-text/Makefile
+++ b/3-text/Makefile
@@ -41,7 +41,9 @@ linkimg:
 	ln -s ${FIGUREIN}/apical-area/figure.png ${FIGUREOUT}/FigS3.png
 	ln -s ${FIGUREIN}/strain-rate/figure.png ${FIGUREOUT}/FigS4.png
 	ln -s ${FIGUREIN}/embryo-proportions/figure.png ${FIGUREOUT}/FigS5.png
+	#ln -s ${FIGUREIN}/ef-sweep/figure.png ${FIGUREOUT}/FigS5.png
 	ln -s ${FIGUREIN}/stg-mutants/figure.png ${FIGUREOUT}/FigS6.png
+	ln -s ${FIGUREIN}/cf-sweep/figure.png ${FIGUREOUT}/FigS7.png
 	# Convert to JPG for smaller file sizes
 	mogrify -format jpg -quality 50 -density 300 -units PixelsPerInch -path ${FIGUREOUT}/ ${FIGUREOUT}/*.png
 	mkdir ${FIGUREOUT}/source
