--- a/3-text/Makefile
+++ b/3-text/Makefile
@@ -12,9 +12,9 @@ DATE=$(shell date +'%Y-%m-%d')
 TIMESTAMPED=${DATE}_${FILE}
 FILTERS=--lua-filter=${RESOURCES}/scholarly-metadata.lua --lua-filter=${RESOURCES}/author-info-blocks.lua --filter pandoc-fignos --filter pandoc-tablenos --citeproc
 PDFVARS=-V fontfamily:libertine -V geometry:bindingoffset=2mm -V geometry:hmargin=25mm -V geometry:vmargin=25mm -V papersize:a4 -V fontsize:11pt
-HTMLVARS=-c resources/normalize.css --standalone 
+HTMLVARS=--standalone 
+#HTMLVARS=-c resources/skeleton.css --standalone 
 #HTMLVARS=-V toc --embed-resources --standalone 
- #
 
 # Main rule
 all: clean figures syncbib compile share
