Update PDF linestretch

--- a/3-text/Makefile
+++ b/3-text/Makefile
@@ -17,6 +17,9 @@ RESOURCES=resources
 TEMPLATE=${RESOURCES}/template
 
 # Root directory with figures
+ANASRC=`realpath ../1-analyses`
+
+# Root directory with figures
 FIGSRC=`realpath ../2-figures`
 
 # Output directory for resized figures
@@ -42,11 +45,11 @@ BRANCH=`git branch --show-current`
 FILEOUT=${DATE}_${BRANCH}_${FILE}
 
 # Filters for running pandoc
-FILTERS=--lua-filter=${RESOURCES}/scholarly-metadata.lua --lua-filter=${RESOURCES}/author-info-blocks.lua --filter pandoc-fignos --filter pandoc-tablenos --citeproc
-#FILTERS=--lua-filter=${RESOURCES}/scholarly-metadata.lua --lua-filter=${RESOURCES}/author-info-blocks.lua --filter pandoc-fignos --filter pandoc-tablenos --filter pandoc-citeproc
+#FILTERS=--lua-filter=${RESOURCES}/scholarly-metadata.lua --lua-filter=${RESOURCES}/author-info-blocks.lua --filter pandoc-fignos --filter pandoc-tablenos --citeproc
+FILTERS=--lua-filter=${RESOURCES}/scholarly-metadata.lua --lua-filter=${RESOURCES}/author-info-blocks.lua --filter pandoc-fignos --filter pandoc-tablenos --filter pandoc-citeproc
 
 # Pandoc variables for PDF
-PDFVARS=-V fontfamily:libertine -V geometry:bindingoffset=2mm -V geometry:hmargin=25mm -V geometry:vmargin=25mm -V papersize:a4 -V fontsize:11pt -V urlcolor='[HTML]{0969da}'
+PDFVARS=-V fontfamily:libertine -V linestretch:1.5 -V geometry:bindingoffset=2mm -V geometry:hmargin=25mm -V geometry:vmargin=25mm -V papersize:a4 -V fontsize:11pt -V urlcolor='[HTML]{0969da}'
 
 # Pandoc variables for HTML
 HTMLVARS=--standalone --mathml
